# vault

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: vault.h
src/: CMakeLists.txt  aes.cpp  aes.h  rand.cpp  rand.h  secret.cpp  secret.h  token.cpp  token.h  types.h  vault.cpp
src/proto/: vault.proto
test/: CMakeLists.txt  vault_test.cpp
